--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     ],
     "require": {
         "php": ">= 8.1",
-        "ext-pcntl": "*",
         "ext-mbstring": "*",
-        "laravel/prompts": "dev-main",
+        "ext-pcntl": "*",
+        "laravel/prompts": "^0.1.3",
         "symfony/console": "^6 || ^5 || ^4",
         "zhamao/logger": "^1.0"
     },
