--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,15 @@ composer.lock
 # default source build root directory
 /buildroot/
 
-# php cs fixer cache file
+# tools cache files
 .php-cs-fixer.cache
+.phpunit.result.cache
 
 # exclude self-runtime
 /bin/*
 !/bin/spc
 !/bin/setup-runtime
 !/bin/spc-alpine-docker
+
+# default test directory
+/tests/var/
