--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": ">= 8.1",
         "ext-mbstring": "*",
         "ext-pcntl": "*",
+        "ext-zip": "*",
         "laravel/prompts": "^0.1.3",
         "symfony/console": "^5.4 || ^6 || ^7",
         "zhamao/logger": "^1.0"
