--- a/.github/workflows/build-macos-x86_64.yml
+++ b/.github/workflows/build-macos-x86_64.yml
@@ -61,7 +61,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: downloads
-          key: php-${{ inputs.version }}-dependencies
+          key: php-${{ inputs.version }}-dependencies-${{ inputs.extensions }}
 
       # With or without debug
       - if: inputs.debug == true
