prevent setup php from using 8.0

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -118,7 +118,7 @@ jobs:
       - name: "Setup PHP"
         uses: shivammathur/setup-php@v2
         with:
-          php-version: "${{ matrix.php }}"
+          php-version: 8.2
           tools: pecl, composer
           extensions: curl, openssl, mbstring
           ini-values: memory_limit=-1
