--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -67,7 +67,6 @@ jobs:
         include:
           - php: '8.1'
           - php: '8.2'
-      fail-fast: false
 
     steps:
       - name: "Checkout"
@@ -98,7 +97,7 @@ jobs:
           vendor/bin/phpunit tests/ --no-coverage
 
   build:
-    name: "Build PHP Test (PHP ${{ matrix.php }})"
+    name: "Build PHP Test (PHP ${{ matrix.php }} ${{ matrix.os }})"
     runs-on: ${{ matrix.os }}
     timeout-minutes: 120
     strategy:
