--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -143,4 +143,6 @@ jobs:
         run: bin/spc download --for-extensions="$(php src/globals/test-extensions.php extensions)" --with-php=${{ matrix.php }} --debug
 
       - name: "Run Build Tests (build)"
-        run: bin/spc build $(php src/globals/test-extensions.php cmd) --build-cli --build-micro --build-fpm --debug --cc=clang --cxx=clang++
+        run: |
+          # bin/spc build $(php src/globals/test-extensions.php cmd) --build-cli --build-micro --build-fpm --debug --cc=clang --cxx=clang++
+          bin/spc build $(php src/globals/test-extensions.php cmd) --build-cli --debug --cc=clang --cxx=clang++
