Add initial windows runtime setup (#292)
* add initial windows runtime setup

* add cool console output

* doctor support windows base

* add `add-path` and `remove-path` for bin/setup-runtime

* fix composer.ps1 path

* add windows system util

* add windows cmd and doctor base check

* add windows fallback for laravel/prompts

* cd fix [skip ci]

* dir separator and typo fix [skip ci]

--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,12 @@ docker/source/
 
 # exclude self-runtime
 /bin/*
-!/bin/spc
-!/bin/setup-runtime
+!/bin/spc*
+!/bin/setup-runtime*
 !/bin/spc-alpine-docker
+
+# exclude windows build tools
+/php-sdk-binary-tools/
 
 # default test directory
 /tests/var/
