add phpstan ignore error

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -8,6 +8,6 @@ parameters:
     - '#Unsafe usage of new static#'
     - '#class Fiber#'
     - '#Attribute class JetBrains\\PhpStorm\\ArrayShape does not exist#'
-    - '#Function Swoole\Coroutine\run not found#'
+    - '#Function Swoole\Coroutine\run not found.#'
   dynamicConstantNames:
     - PHP_OS_FAMILY
