update swoole extension test case

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -14,3 +14,4 @@ parameters:
   excludePaths:
       analyseAndScan:
             - ./src/globals/tests/swoole.php
+            - ./src/globals/tests/swoole.phpt
