add docs config actions

--- a/.github/workflows/update-docs-config.yml
+++ b/.github/workflows/update-docs-config.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           repository: static-php/static-php-cli-docs
           ref: master
+          token: ${{ secrets.DOCS_REPO_TOKEN }}
           path: static-php-cli-docs
 
       - name: "Set up Git"
