--- a/.github/workflows/update-docs-config.yml
+++ b/.github/workflows/update-docs-config.yml
@@ -11,7 +11,7 @@ jobs:
   update-docs-config:
     name: "Update Docs Config"
     runs-on: ubuntu-latest
-    if: secrets.DOCS_REPO_TOKEN != ''
+    if: ${{ secrets.DOCS_REPO_TOKEN != '' }}
     steps:
       - name: "Checkout static-php-cli"
         uses: actions/checkout@v4
