--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -114,6 +114,7 @@ jobs:
         os:
           - ubuntu-latest
           - macos-latest
+          - windows-latest
       fail-fast: false
     steps:
       - name: "Checkout"
