--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -154,4 +154,4 @@ jobs:
         run: bin/spc download --for-extensions="$(php src/globals/test-extensions.php extensions)" --with-php=${{ matrix.php }} --debug
 
       - name: "Run Build Tests (build)"
-        run: bin/spc build $(php src/globals/test-extensions.php cmd) --build-cli --build-micro --build-fpm --debug
+        run: bin/spc build "$(php src/globals/test-extensions.php extensions)" $(php src/globals/test-extensions.php libs_cmd) --build-cli --build-micro --build-fpm --debug
