--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -129,6 +129,10 @@ jobs:
           extensions: curl, openssl, mbstring
           ini-values: memory_limit=-1
 
+      - name: "Use test token if exists"
+        if: secrets.TEST_GH_TOKEN
+        run: echo "GITHUB_TOKEN=${{ secrets.TEST_GH_TOKEN }}" >> $GITHUB_ENV
+
       - name: "Cache Composer packages"
         id: composer-cache
         uses: actions/cache@v3
