--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -130,7 +130,7 @@ jobs:
           ini-values: memory_limit=-1
 
       - name: "Use test token if exists"
-        if: secrets.TEST_GH_TOKEN
+        if: ${{ secrets.TEST_GH_TOKENS }}
         run: echo "GITHUB_TOKEN=${{ secrets.TEST_GH_TOKEN }}" >> $GITHUB_ENV
 
       - name: "Cache Composer packages"
