--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -129,6 +129,13 @@ jobs:
           extensions: curl, openssl, mbstring
           ini-values: memory_limit=-1
 
+      - name: "Use test token if exists"
+        if: matrix.os != 'windows-latest'
+        run: |
+          if [ "${{ secrets.TEST_GH_TOKEN }}" != "" ]; then
+            echo "GITHUB_TOKEN=${{ secrets.TEST_GH_TOKEN }}" >> $GITHUB_ENV
+          fi
+
       - name: "Cache Composer packages"
         id: composer-cache
         uses: actions/cache@v3
@@ -152,7 +159,12 @@ jobs:
         run: bin/spc doctor --auto-fix
 
       - name: "Run Build Tests (download)"
-        run: bin/spc download --for-extensions="$(php src/globals/test-extensions.php extensions)" --with-php=${{ matrix.php }} --debug
+        uses: nick-fields/retry@v3
+        with:
+          timeout_minutes: 10
+          max_attempts: 3
+          retry_on: error
+          command: bin/spc download --for-extensions="$(php src/globals/test-extensions.php extensions)" --with-php=${{ matrix.php }} --debug
 
       - name: "Run Build Tests (build)"
         run: bin/spc build "$(php src/globals/test-extensions.php extensions)" $(php src/globals/test-extensions.php libs_cmd) --build-cli --build-micro --build-fpm --debug
