--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         "captainhook/captainhook": "^5.10",
         "captainhook/plugin-composer": "^5.3",
         "friendsofphp/php-cs-fixer": "^3.25",
-        "humbug/box": "^4.3",
+        "humbug/box": "^4.5",
         "nunomaduro/collision": "^7.8",
         "phpstan/phpstan": "^1.10",
-        "phpunit/phpunit": "^10.3"
+        "phpunit/phpunit": "^10.3 || ^9"
     },
     "autoload": {
         "psr-4": {
