--- a/.github/workflows/build-windows-x86_64.yml
+++ b/.github/workflows/build-windows-x86_64.yml
@@ -52,12 +52,18 @@ jobs:
       - if: steps.cache-composer-deps.outputs.cache-hit != 'true'
         run: composer update --no-dev --classmap-authoritative
 
+      - name: Generate hashed key for cache
+        id: cache-key
+        run: |
+          INPUT_HASH=$(echo "${{ inputs.version }}-dependencies-${{ inputs.extensions }}" | sha256sum | awk '{print $1}')
+          echo "::set-output name=hash::$INPUT_HASH"
+
       # Cache downloaded source
       - id: cache-download
         uses: actions/cache@v3
         with:
           path: downloads
-          key: php-${{ inputs.version }}-dependencies-${{ inputs.extensions }}
+          key: php-${{ steps.cache-key.outputs.hash }}
 
       # With or without debug
       - if: inputs.debug == true
